--- a/templates/index.html
+++ b/templates/index.html
@@ -10,31 +10,29 @@
                         <form method="POST" enctype="multipart/form-data">
                             {{ form.csrf_token }}
                             <div>
-                                <label class="col-form-label">Graph type:</label>
+                                <label class="col-form-label">Group by:</label>
                             </div>
                             <div class="form-group">
                                 {% for subfield in form.type %}
                                     <div class="custom-control custom-radio custom-control-inline">
-                                        {{ subfield(class="custom-control-input", onclick="clicked('"+subfield.label.text+"')") }}
+                                        {{ subfield(class="custom-control-input", onclick="setValue('"+subfield.label.text+"')") }}
                                         {{ subfield.label(class="custom-control-label") }}
 
                                     </div>
                                 {% endfor %}
                             </div>
                             <div class="form-row justify-content-center">
-                                <div class="form-row justify-content-center">
-                                    <div class="col-md-5 mb-3">
-                                        <label class="col-form-label">Semester</label>
-                                        {{ form.semester(class="form-control", required="") }}
-                                    </div>
-                                    <div class="form-group" id="crngroup">
-                                        <label class="col-form-label">CRN</label>
-                                        {{ form.CRN(class="form-control", required="") }}
-                                    </div>
-                                    <div class="form-group" id="examgroup">
-                                        <label class="col-form-label">Exam</label>
-                                        {{ form.exam(class="form-control", required="") }}
-                                    </div>
+                                <div class="col-md-5 mb-3">
+                                    <label class="col-form-label">Semester</label>
+                                    {{ form.semester(class="form-control", required="") }}
+                                </div>
+                                <div class="col-md-4 mb-3" id="crngroup">
+                                    <label class="col-form-label">CRN</label>
+                                    {{ form.CRN(class="form-control", required="") }}
+                                </div>
+                                <div class="col-md-3 mb-3" id="examgroup">
+                                    <label class="col-form-label">Exam</label>
+                                    {{ form.exam(class="form-control", required="") }}
                                 </div>
                             </div>
                             <div class="form-group" id="color">
@@ -48,7 +46,8 @@
                                 </div>
                             </div>
                             <div align="center">
-                                <input type="submit" class="btn btn-primary updateButton" id='generate' value="Generate">
+                                <input type="submit" class="btn btn-primary updateButton" id='generate'
+                                       value="Generate">
                             </div>
                         </form>
                     </div>
@@ -63,31 +62,28 @@
         </div>
     </div>
     <script>
-        window.onload = function () {
-            document.getElementById("color").style.display = "none";
-            document.getElementById("examgroup").style.display = "none";
-        };
 
-        function clicked(element) {
-            if (element === "By Exam") {
+        function setValue() {
+            if (document.getElementById("type-1").checked === true) {
                 document.getElementById("CRN").required = true;
                 document.getElementById("exam").required = true;
                 document.getElementById("crngroup").style.display = "inline";
                 document.getElementById("color").style.display = "none";
                 document.getElementById("examgroup").style.display = "none";
-            } else if (element === "By Class") {
+            } else if (document.getElementById("type-2").checked === true) {
                 document.getElementById("CRN").required = false;
                 document.getElementById("exam").required = false;
                 document.getElementById("crngroup").style.display = "none";
                 document.getElementById("color").style.display = "none";
                 document.getElementById("examgroup").style.display = "none";
-
             } else {
                 document.getElementById("crngroup").style.display = "inline";
                 document.getElementById("color").style.display = "inline";
                 document.getElementById("examgroup").style.display = "inline";
             }
         }
+
+        window.onload = setValue();
 
         let semester_select = document.getElementById('semester');
         let CRN_select = document.getElementById('CRN');
@@ -128,6 +124,4 @@
             });
         }
     </script>
-    <script src="http://code.jquery.com/jquery.js"></script>
-
 {% endblock %}
