--- a/templates/remove.html
+++ b/templates/remove.html
@@ -1,86 +1,138 @@
 {% extends 'base.html' %}
-{% set active_page = "Add" %}
+{% set active_page = "Remove" %}
 {% block content %}
     <div class="main-content-inner">
         <div class="row justify-content-center">
-            <div class="col-lg-2 col-ml-12">
-                <div class=" mt-5">
-                    <div class="card">
-                        <div class="card-body">
-                            <h4 align="center" class="header-title">Remove Class</h4>
-                            <div align="center">
-                                <form method="POST">
-                                    <div align="center" class="form-group">
-                                        <label class="col-form-label">Class ID</label>
-                                        {{ remove_class_form.class_id(class="form-control col-sm-6", required="") }}
+            <div class="col-lg-3 mt-5">
+                <div class="card">
+                    <div class="card-body">
+                        <h4 align="center" class="header-title">Remove Class</h4>
+                            <form method="POST">
+                                <div class="form-row justify-content-center">
+                                    <div class="col-md-5 mb-3">
+                                        <label class="col-form-label">Semester</label>
+                                        {{ remove_class_form.semester(class="form-control", required="", id="semester_class") }}
                                     </div>
-                                    <div class="form-group">
+                                    <div class="col-md-4 mb-3">
+                                        <label class="col-form-label">CRN</label>
+                                        {{ remove_class_form.CRN(class="form-control", required="", id="CRN_class") }}
+                                    </div>
+                                    <div align="center">
                                         <input type="submit" class="btn btn-primary" name="remove_class"
                                                value="Remove Class">
                                     </div>
+                                </div>
+                            </form>
+                            {% with messages = get_flashed_messages(category_filter=["cat5"]) %}
+                                {% if messages %}
+                                    {% for message in messages %}
+                                        <div class="mt-3 alert alert-success" role="alert">
+                                        {{ message }}
+                                        </div>
+                                    {% endfor %}
+                                {% endif %}
+                            {% endwith %}
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 mt-5">
+                    <div class="card">
+                        <div class="card-body">
+                            <h4 align="center" class="header-title">Remove Exam</h4>
+                                <form method="POST" enctype="multipart/form-data">
+                                    <div class="form-row justify-content-center">
+                                        <div class="col-md-5 mb-3">
+                                            <label class="col-form-label">Semester</label>
+                                            {{ remove_exam_form.semester(class="form-control", required="", id="semester_exam") }}
+                                        </div>
+                                        <div class="col-md-4 mb-3">
+                                            <label class="col-form-label">CRN</label>
+                                            {{ remove_exam_form.CRN(class="form-control", required="", id="CRN_exam") }}
+                                        </div>
+                                        <div class="col-md-3 mb-3" id="examgroup">
+                                            <label class="col-form-label">Exam</label>
+                                            {{ remove_exam_form.exam(class="form-control", required="", id="exam_exam") }}
+                                        </div>
+                                    </div>
+                                    <div align="center">
+                                        <input type="submit" class="btn btn-primary" name="remove_exam"
+                                               value="Remove Exam">
+                                    </div>
                                 </form>
-                                {% with messages = get_flashed_messages(category_filter=["cat1"]) %}
+                                {% with messages = get_flashed_messages(category_filter=["cat6"]) %}
                                     {% if messages %}
                                         {% for message in messages %}
-                                            <div class="alert alert-success" role="alert">
+                                            <div class="mt-3 alert alert-success" role="alert">
                                             {{ message }}
                                         {% endfor %}
                                     {% endif %}
                                 {% endwith %}
-                                {% with messages = get_flashed_messages(category_filter=["cat2"]) %}
-                                    {% if messages %}
-                                        {% for message in messages %}
-                                            <div class="alert alert-danger" role="alert">
-                                                {{ message }}
-                                            </div>
-                                        {% endfor %}
-                                    {% endif %}
-                                {% endwith %}
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-2 col-ml-12">
-                    <div class=" mt-5">
-                        <div class="card">
-                            <div class="card-body">
-                                <h4 align="center" class="header-title">Remove Exam</h4>
-                                <div align="center">
-                                    <form method="POST">
-                                        <div align="center" class="form-group">
-                                            <label class="col-form-label">Exam ID</label>
-                                            {{ remove_exam_form.class_id(class="form-control col-sm-6", required="") }}
-                                        </div>
-                                        <div class="form-group">
-                                            <input type="submit" class="btn btn-primary" name="remove_exam"
-                                                   value="Remove Exam">
-                                        </div>
-                                    </form>
-                                    {% with messages = get_flashed_messages(category_filter=["cat1"]) %}
-                                        {% if messages %}
-                                            {% for message in messages %}
-                                                <div class="alert alert-success" role="alert">
-                                                {{ message }}
-                                            {% endfor %}
-                                        {% endif %}
-                                    {% endwith %}
-                                    {% with messages = get_flashed_messages(category_filter=["cat2"]) %}
-                                        {% if messages %}
-                                            {% for message in messages %}
-                                                <div class="alert alert-danger" role="alert">
-                                                    {{ message }}
-                                                </div>
-                                            {% endfor %}
-                                        {% endif %}
-                                    {% endwith %}
-                                    </div>
-                                </div>
-                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    <script>
+        let semester_class = document.getElementById('semester_class');
+        let CRN_class = document.getElementById('CRN_class');
+        let semester_exam = document.getElementById('semester_exam');
+        let CRN_exam = document.getElementById('CRN_exam');
+        let exam_exam = document.getElementById('exam_exam');
+
+        semester_class.onchange = function () {
+            semester = semester_class.value;
+            console.log(semester);
+
+            fetch('/CRN/' + semester).then(function (response) {
+
+                response.json().then(function (data) {
+                    let optionHTML = '<option value="">---</option>';
+
+                    for (let CRN of data.CRNs) {
+                        optionHTML += '<option value="' + CRN.class_id + '">' + CRN.CRN + '</option>';
+                    }
+
+                    CRN_class.innerHTML = optionHTML;
+
+                });
+            });
+        };
+
+        semester_exam.onchange = function () {
+            semester = semester_exam.value;
+            console.log(semester);
+
+            fetch('/CRN/' + semester).then(function (response) {
+
+                response.json().then(function (data) {
+                    let optionHTML = '<option value="">---</option>';
+
+                    for (let CRN of data.CRNs) {
+                        optionHTML += '<option value="' + CRN.class_id + '">' + CRN.CRN + '</option>';
+                    }
+
+                    CRN_exam.innerHTML = optionHTML;
+
+                });
+            });
+        };
+
+        CRN_exam.onchange = function () {
+            CRN = CRN_exam.value;
+
+            fetch('/test/' + CRN).then(function (response) {
+
+                response.json().then(function (data) {
+                    let optionHTML = '';
+
+                    for (let test of data.tests) {
+                        optionHTML += '<option value="' + test.exam_num + '">' + test.exam_num + '</option>';
+                    }
+
+                    exam_exam.innerHTML = optionHTML;
+                });
+            });
+        }
+    </script>
 {% endblock %}
