--- a/templates/add.html
+++ b/templates/add.html
@@ -127,6 +127,15 @@
                                 <input type="submit" class="btn btn-primary" name="add_grades" value="Upload">
                             </div>
                         </form>
+                        {% with messages = get_flashed_messages(category_filter=["cat7"]) %}
+                            {% if messages %}
+                                {% for message in messages %}
+                                    <div class="mt-3 alert alert-success" role="alert">
+                                        {{ message }}
+                                    </div>
+                                {% endfor %}
+                            {% endif %}
+                        {% endwith %}
                     </div>
                 </div>
             </div>
