--- a/templates/base.html
+++ b/templates/base.html
@@ -6,10 +6,8 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Study Strategies - {{ active_page }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" type="image/png" href="/static/images/icon/favicon.ico">
-    <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/static/css/themify-icons.css">
 
 
     <link rel="stylesheet" href="/static/css/typography.css">
@@ -60,7 +58,7 @@
 
                                 <li {% if id == active_page %} class="active" {% endif %}>
                                     <a href="{{ href|e }}">
-                                        <i>{% if caption == "Analyze" %} <i class="ti-dashboard"></i>
+                                        <i>{% if caption == "Analyze" %} <i class="fa fa-bar-chart"></i>
                                         {% elif caption == "Edit" %} <i class="fa fa-align-left"></i>
                                         {% elif caption == "View" %} <i class="fa fa-eye"></i>
                                         {% endif %} </i>
@@ -92,12 +90,12 @@
         </div>
     </div>
 </div>
-<script src="http://code.jquery.com/jquery.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 
 
 
 
-<script src="/static/js/bootstrap.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
 <script src="/static/js/scripts.js"></script>
 </body>
